--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <body>
     <div id="app"></div>
 
-    <script src="js/components/vue_header.js"></script>
+    <script src="js/components/vue_home_page.js"></script>
+    <script src="js/components/vue_form_page.js"></script>
+
+    <script src="js/components/vue_sider.js"></script>
     <script src="js/components/vue_app.js"></script>
     <script src="js/main.js"></script>
 </body>
