--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>DEMO</title>
+    <title>201819914脚本大作业</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-router/dist/vue-router.js"></script>
+    <script src="./lib/vue.js"></script>
+    <script src="./lib/vue-router.js"></script>
     <!-- 引入样式 -->
     <link rel="stylesheet" href="./lib/antd.css">
     <!-- 引入组件库 -->
